# autosat-tuning

./: .env.example  README.md  config.all.yaml  config.eval_only.yaml  config.mini.yaml  config.multitask.yaml  config.yaml  main.py  plotting.py  prompting.py  pyproject.toml  server.py  utils.py
autosat_core/: __init__.py  common.py  marker_adapter.py  plotting.py  prompting.py  server.py  solver_source.py  tasks.py
autosat_core/evaluation/: __init__.py
autosat_core/execution/: execution_worker.py
autosat_core/llm_api/: base_api.py
autosat_tuning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
datasets/cryptography-ascon/eval/: asconhashv12_opt64_H10_M2-BPHqhzNzqi_m5_6_U14.c.cnf.xz  asconhashv12_opt64_H10_M2-pH7B6T6Vub_m6_7.c.cnf.xz  asconhashv12_opt64_H12_M2-CxLJidFX21oI_m3_6_U2.c.cnf.xz  asconhashv12_opt64_H13_M2-NBRdIKEb8MS2W_m3_5.c.cnf.xz  asconhashv12_opt64_H13_M2-axxJh7DAq767y_m4_5.c.cnf.xz  asconhashv12_opt64_H7_M2-OrF8zEw_m2_4.c.cnf.xz  (+6 more)
evaluation/: evaluate.py
examples/EasySAT/: config.mini.yaml  config.stepfun.mini.yaml  config.yaml  config_explanation.txt  eval_config.mini.yaml  eval_config.yaml
execution/: execution_worker.py
fcns-tuning/: README.md  config.yaml  main.py  plotting.py  prompting.py
fcns-tuning/prompts/: feedback_prompt.txt  original_prompt.txt
llm_api/: base_api.py
prompts/: INTERFACE.md  feedback_prompt.txt  original_prompt.txt
solver/baseline/: EasySAT.cpp
tools/: eval_iter_checkpoints.py  eval_sequential_writeback.py  plot_par2_runs.py  replot_par2_beautify.py  test_eliza.py
trainer/: sat_trainer.py
(+626 files in other folders)
