[project]
name = "autosat-tuning"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "openai>=1.0",
    "requests>=2.31",
    "matplotlib>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autosat_core*", "llm_api*", "execution*", "evaluation*"]

[tool.setuptools]
py-modules = ["main", "utils", "prompting", "plotting", "server"]

[dependency-groups]
dev = []
